--- a/assets/pug/mixin/element-product-box.pug
+++ b/assets/pug/mixin/element-product-box.pug
@@ -13,7 +13,7 @@
         },
         {
             image: "ecommerce/2.jpg",
-            productName: "Boat Headphone",
+            productName: "Latest Headphone",
             price: "$520",
             deletePrice: "$650",
             delivery:"Free delivery by Govo",
