--- a/assets/postcss/components/_modal.css
+++ b/assets/postcss/components/_modal.css
@@ -60,6 +60,18 @@
 
         &.modal-content-scroll {
           @apply left-0 right-0 w-auto h-[18.75rem] overflow-auto px-2;
+
+          &.custom-scroll {
+            &::-webkit-scrollbar {
+              @apply w-[0.25rem] h-[0.25rem];
+            }
+            &::-webkit-scrollbar-track {
+              @apply bg-gray-200;
+            }
+            /* &::-webkit-scrollbar-thumb {
+              @apply bg-gray-300  rounded-[0.625px] border border-gray-400  h-[0.3125rem];
+            } */
+          }
         }
 
         .modal-img {
