--- a/assets/pug/pages/unique/shop.pug
+++ b/assets/pug/pages/unique/shop.pug
@@ -266,48 +266,43 @@ html(lang='en')
             div.modal-main
                 input#productmodal(class="peer" name="productmodal" type='checkbox')
                 label.modal-overlay(class="peer-checked:block" for='productmodal')
-                div.modal.modal-center(class="peer-checked:opacity-100 peer-checked:visible !duration-75")
-                    //- div.modal-header
-                    //-     h3 Hurry !!
-                    //-     label(for='productmodal') 
-                    //-         i(data-feather="x" class="w-4 h-4 stroke-dark")
-                    div.modal-body.product-modal
-                        div.grid.grid-cols-12.gap-card-gap(class="md:max-w-[80%] sm:max-w-[100%] mx-auto")
-                            .col-span-6(class="md:col-span-12")             
+                div.modal.modal-center(class="peer-checked:opacity-100 peer-checked:visible !duration-75 w-11/12 max-w-5xl")
+                    div.modal-body.product-modal(class="md:modal-content-scroll md:custom-scroll md:!h-[90vh] !px-4")
+                        div.grid.grid-cols-12.gap-card-gap
+                            div.col-span-6(class="md:col-span-12")             
                                 div.product-slider
-                                    .swiper.productImgNav
-                                        .swiper-wrapper
-                                            .swiper-slide
+                                    div.swiper.productImgNav
+                                        div.swiper-wrapper
+                                            div.swiper-slide
                                                 img(src="../../assets/images/ecommerce/18.jpg" alt="product")
-                                            .swiper-slide
+                                            div.swiper-slide
                                                 img(src="../../assets/images/ecommerce/17.jpg" alt="product")
-                                            .swiper-slide
+                                            div.swiper-slide
                                                 img(src="../../assets/images/ecommerce/19.jpg" alt="product")
-                                            .swiper-slide
+                                            div.swiper-slide
                                                 img(src="../../assets/images/ecommerce/20.jpg" alt="product")
-                                            .swiper-slide
+                                            div.swiper-slide
                                                 img(src="../../assets/images/ecommerce/21.jpg" alt="product")
-                                        .swiper-button-next(class="text-primary")
-                                        .swiper-button-prev(class="text-primary")
-                                    .swiper.productImg( class="mt-4 md:mt-3")
-                                        .swiper-wrapper
-                                            .swiper-slide
+                                        div.swiper-button-next(class="text-primary")
+                                        div.swiper-button-prev(class="text-primary")
+                                    div.swiper.productImg( class="mt-4 md:mt-3")
+                                        div.swiper-wrapper
+                                            div.swiper-slide
                                                 img(src="../../assets/images/ecommerce/18.jpg" alt="product")
-                                            .swiper-slide
+                                            div.swiper-slide
                                                 img(src="../../assets/images/ecommerce/17.jpg" alt="product")
-                                            .swiper-slide
+                                            div.swiper-slide
                                                 img(src="../../assets/images/ecommerce/19.jpg" alt="product")
-                                            .swiper-slide
+                                            div.swiper-slide
                                                 img(src="../../assets/images/ecommerce/20.jpg" alt="product")
-                                            .swiper-slide
+                                            div.swiper-slide
                                                 img(src="../../assets/images/ecommerce/21.jpg" alt="product")
-
-                            .col-span-6(class="md:col-span-12 md:mt-5")  
-                                div.flex.justify-between
-                                    h3.leading-none(class="font-semibold 3xl:flex 3xl:justify-between 3xl:items-center lg:text-xl text-primary") Casual Men's t-shirt
+                            div.col-span-6(class="md:col-span-12")  
+                                div.flex.justify-between.gap-2
+                                    div.flex.items-center.gap-2
+                                        h3.leading-none(class="font-semibold 3xl:flex 3xl:justify-between 3xl:items-center text-primary ") Casual Men's t-shirt
+                                        i.fa-solid.fa-share(class="w-4 h-4 text-content")
                                     div.flex.gap-2.items-center 
-                                        //- i.fa-solid.fa-share(class="w-4 h-4 text-content3")
-                                        //- span.text-content3.text-sm Share
                                         label(for='productmodal') 
                                             i(data-feather="x" class="w-4 h-4 stroke-dark cursor-pointer")
                                 span.text-content3.text-xs.leading-none #15704                  
@@ -322,73 +317,40 @@ html(lang='en')
                                         i(data-feather="star" class="w-4 h-4 fill-warning stroke-transparent")
                                         i(data-feather="star" class="w-4 h-4 fill-content stroke-transparent")
                                     label(for="4above").text-content3.text-xs.font-semibold 1059 ratings
-                                p.text-content3.text-sm.mt-1 This Men's Oversize T-Shirt is ideal for daily wear or for college because it is incredibly cool and cosy.
-                                div.divider.w-full.my-4(class="before:!bg-border-light after:!bg-border-light")
+                                p.text-content3.text-sm.mt-1.line-clamp-2 This Men's Oversize T-Shirt is ideal for daily wear or for college because it is incredibly cool and cosy.
+                                div.divider.w-full.my-4(class="before:!bg-border-light after:!bg-border-light 2lg:my-3")
+                                div.grid.grid-cols-12.gap-card-gap.items-center 
+                                    div.col-span-6(class="2lg:col-span-7 2sm:col-span-12")
+                                        div.flex.items-center.gap-3
+                                            label.text-title.text-sm.font-medium(for="color") Color
+                                            ul(class="flex flex-wrap gap-1 items-center" id="color")
+                                                li(class="w-5 h-5 bg-light rounded-full cursor-pointer")
+                                                li(class="w-5 h-5 bg-black rounded-full cursor-pointer")
+                                                li(class="w-5 h-5 bg-warning rounded-full cursor-pointer")
+                                                li(class="w-5 h-5 bg-danger rounded-full cursor-pointer")
+                                                li(class="w-5 h-5 bg-info rounded-full cursor-pointer")
+                                    div.col-span-6(class="2lg:col-span-5 2sm:col-span-12")
+                                        div.flex.items-center.gap-3
+                                            label.text-title.text-sm.font-medium(for="qty") Qty   
+                                            select.form-select.block.w-full.px-3.text-xs.font-normal.text-content3.bg-white.bg-clip-padding.bg-no-repeat.border.border-border-light.rounded-5.transition.ease-in-out.m-0(class='py-1 min-w-[50px] 2sm:w-[100px]' id="qty" aria-label='Default select example')
+                                                option(selected='') 1
+                                                option(value='1') 2
+                                                option(value='2') 3
+                                                option(value='3') 4
+                                                option(value='3') 5
+                                div.divider.w-full.my-4(class="before:!bg-border-light after:!bg-border-light 2lg:my-3")
                                 div.flex.items-center.gap-3
-                                    label.text-title.text-sm.font-medium(class="min-w-[80px]" for="color") Color
-                                    ul(class="flex flex-wrap gap-2 items-center" id="color")
-                                        li(class="w-6 h-6 bg-light rounded-full cursor-pointer")
-                                        li(class="w-6 h-6 bg-black rounded-full cursor-pointer")
-                                        li(class="w-6 h-6 bg-warning rounded-full cursor-pointer")
-                                        li(class="w-6 h-6 bg-danger rounded-full cursor-pointer")
-                                        li(class="w-6 h-6 bg-info rounded-full cursor-pointer")
-                                div.divider.w-full.my-4(class="before:!bg-border-light after:!bg-border-light")
-                                div.flex.items-center.gap-3
-                                    label.text-title.text-sm.font-medium(for="qty" class="min-w-[80px]") Quantity   
-                                    select.form-select.block.w-full.px-3.text-xs.font-normal.text-content3.bg-white.bg-clip-padding.bg-no-repeat.border.border-border-light.rounded-5.transition.ease-in-out.m-0(class='min-w-[150px] py-[9px] w-max' id="qty" aria-label='Default select example')
-                                        option(selected='') 1
-                                        option(value='1') 2
-                                        option(value='2') 3
-                                        option(value='3') 4
-                                        option(value='3') 5
-                                div.divider.w-full.my-4(class="before:!bg-border-light after:!bg-border-light")
-                                div.flex.items-center.gap-3
-                                    label.text-title.text-sm.font-medium(for="size" class="min-w-[80px]") Sizes   
+                                    label.text-title.text-sm.font-medium(for="size") Sizes   
                                     div.flex.items-center
                                         button.btn.btn-md.border.border-border-light.rounded-none.text-title.leading-none(class="hover:bg-gray-extralight") S 
                                         button.btn.btn-md.btn-active.text-title.leading-none.border.border-border-light.bg-gray-extralight.rounded-none(class="hover:bg-gray-extralight") M
                                         button.btn.btn-md.border.border-border-light.rounded-none.text-title.leading-none(class="hover:bg-gray-extralight") L
                                         button.btn.btn-md.border.border-border-light.rounded-none.text-title.leading-none(class="hover:bg-gray-extralight") XL
-                                div.divider.w-full.my-4(class="before:!bg-border-light after:!bg-border-light")
-                                //- div.flex.items-center.justify-between
-                                div.social.flex.gap-3.items-center
-                                    a(href="https://www.linkedin.com/login" class="!text-linkedin")
-                                        i.fa-brands.fa-linkedin-in(class="w-5 h-5")
-                                    a(href="https://twitter.com/i/flow/login" class="!text-twitter")
-                                        i.fa-brands.fa-twitter(class="w-5 h-5")
-                                    a(href="https://www.whatsapp.com/" class="!text-success")
-                                        i.fa-brands.fa-whatsapp(class="w-5 h-5")
-                                    a(href="https://www.facebook.com/" class="!text-facebook")
-                                        i.fa-brands.fa-facebook(class="w-5 h-5")
-                                    a(href="https://www.instagram.com/accounts/login/" class="instagram")
-                                        svg(width='0' height='0')
-                                            radialgradient#rg(r='150%' cx='30%' cy='107%')
-                                                stop(stop-color='#fdf497' offset='0')
-                                                stop(stop-color='#fdf497' offset='0.05')
-                                                stop(stop-color='#fd5949' offset='0.45')
-                                                stop(stop-color='#d6249f' offset='0.6')
-                                                stop(stop-color='#285AEB' offset='0.9')
-                                        i.fa-brands.fa-instagram(class="w-5 h-5")
-                                    //- div.flex.gap-2.items-center 
-                                    //-     i.fa-solid.fa-share(class="w-3 h-3 text-content3")
-                                    //-     span.text-title.text-sm.font-medium Share
-                                div.divider.w-full.my-4(class="before:!bg-border-light after:!bg-border-light")
-                                div.flex.flex-wrap.gap-2.items-center.capitalize 
-                                    a(href="cart.html").btn.btn-primary.text-white.text-sm Add to cart         
-                                    a(href="wishlist.html").btn.btn-secondary.text-white.text-sm Add to wishlist         
-                                    a(href="checkout.html").btn.btn-warning.text-white.text-sm Buy it now         
-
-                            
-                                                   
-                                //- p.mt-3.text-gray-500 It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that.
-
-
-
-                    
-                    //- label(for="productmodal").btn.btn-danger.p-2.text-white Close
-
-
-
+                                div.divider.w-full.my-4(class="before:!bg-border-light after:!bg-border-light 2lg:my-3")
+                                div.flex.flex-wrap.gap-2.items-center.capitalize(class="2lg:gap-1") 
+                                    a(href="cart.html").btn.btn-primary.text-white.text-sm(class="lg:px-2 lg:text-xs") Add to cart         
+                                    a(href="wishlist.html").btn.btn-secondary.text-white.text-sm(class="lg:px-2 lg:text-xs") Add to wishlist         
+                                    a(href="checkout.html").btn.btn-warning.text-white.text-sm(class="lg:px-2 lg:text-xs") Buy it now         
 
     include ../../layout/footer-files
 
