--- a/assets/pug/data/tables.pug
+++ b/assets/pug/data/tables.pug
@@ -917,3 +917,35 @@
             ] 
         }; 
 
+//- ====== Checkout-table json ====== -//
+-
+    var CHECKOUT_TABLE= 
+        {
+            header:["Product","Product Detail","Price",],
+                body:[
+                {
+                    product:"11.jpg",
+                    productDetail:"Coffee Cup",
+                    subDetail:"$98 * 2",
+                    price:"$190",     
+                },
+                {
+                    product:"13.jpg",
+                    productDetail:"Facewash - For Good skincare",
+                    subDetail:"$75 * 2",
+                    price:"$150",    
+                },
+                {
+                    product:"14.jpg",
+                    productDetail:"Perfume - Great fragrance",
+                    subDetail:"$299",
+                    price:"$299",   
+                },
+                {
+                    product:"16.jpg",
+                    productDetail:"Women's Leather Bags",
+                    subDetail:"$212",
+                    price:"$212",
+                },
+            ]    
+        };
